kanc_pamoi/src/tests/sample_code/should_fail/single_file/parse/empty_parens/empty_fun_params.k
type U {
    u: U,
}

let foo = fun foo(): U { U.u };
